--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
                         ],
                         "styles": [
                             "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "./node_modules/carbon-components/css/carbon-components.min.css",
                             "src/assets/fonts/ptSansCaption.css",
                             "src/assets/styles/styles.scss"
                         ],
