--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
         "@angular/platform-server": "~7.2.0",
         "@angular/router": "~7.2.0",
         "bootstrap": "^3.3.7",
+        "@carbon/icons-angular": "^10.1.0",
+        "carbon-components": "^10.2.0",
+        "carbon-components-angular": "^3.2.0",
         "classlist.js": "^1.1.20150312",
         "core-js": "^2.5.7",
         "intl": "^1.2.5",
